<resources>

    <string name="app_name">My Movies Deux</string>

    <!-- - - - - - - - - - -  -->
    <!-- MOVIE POSTER VALUES  -->
    <!-- - - - - - - - - - -  -->
    <string name="movie_poster_content_description">Movie Image</string>
    <string name="error_loading_message">Error: Images did not load correctly.</string>


    <!-- - - - - - - - - - -  -->
    <!-- MOVIE DETAILS VALUES -->
    <!-- - - - - - - - - - -  -->
    <string name="movie_title_content">Movie Title</string>
    <string name="movie_title_label">Title:</string>
    <string name="movie_release_date_label">Release Date:</string>
    <string name="movie_rating_label">Rating:</string>
    <string name="movie_description_label">Description:</string>

    <!-- - - - - - - - - - -  -->
    <!--     MENU VALUES      -->
    <!-- - - - - - - - - - -  -->
    <string name="action_by_top_rated">Sort By Rating</string>
    <string name="action_by_most_popular">Sort By Popularity</string>
    <string name="action_favorite">Show Favorites</string>
    <string name="action_refresh">Refresh</string>

    <!-- - - - - - - - - - -  -->
    <!--   SETTINGS VALUES    -->
    <!-- - - - - - - - - - -  -->
    <string name="settings_activity">Settings</string>

    <!-- - - - - - - - - - -  -->
    <!-- API KEY INSERT YOURS -->
    <!-- - - - - - - - - - -  -->
    <!--<string name="movie_db_key">1234567890</string>-->

    <string name="empty_favorites">There are currently no selected favorites.</string>

    <string name="trailer_none">There are no trailers available for this film.</string>
    <string name="review_none">There are no reviews available for this film.</string>
    <string name="trailer_image">Trailer Image</string>
    <string name="trailer_header">Trailers</string>

</resources>
