<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="cloud.mockingbird.mymoviesdeux.DetailActivity">

  <ScrollView
    android:id="@+id/details_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/tv_movie_title"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:background="@color/colorPrimaryDark"
          android:contentDescription="@string/movie_title_content"
          android:gravity="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
          android:id="@+id/iv_movie_poster_image"
          android:layout_width="160dp"
          android:layout_height="190dp"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:adjustViewBounds="true"
          android:contentDescription="@string/movie_poster_content_description"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"/>

        <android.support.design.widget.FloatingActionButton
          android:id="@+id/fab_favorite"
          android:layout_width="wrap_content"
          android:layout_height="65dp"
          android:layout_marginTop="16dp"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="16dp"
          android:backgroundTint="@color/colorPrimaryDark"
          android:clickable="true"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toEndOf="@+id/linearLayout"
          app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
          app:srcCompat="@drawable/ic_heart_outline"
          android:focusable="true"/>

        <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="117dp"
          android:layout_height="62dp"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:orientation="vertical"
          app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_image"
          app:layout_constraintTop_toBottomOf="@+id/tv_movie_title">

          <TextView
            android:id="@+id/tv_movie_release_date_label"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_release_date_label"/>

          <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

          <TextView
            android:id="@+id/tv_movie_rating_label"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_rating_label"/>

          <TextView
            android:id="@+id/tv_movie_vote_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>

        <ScrollView
          android:id="@+id/scrollView2"
          android:layout_width="175dp"
          android:layout_height="300dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.529"
          app:layout_constraintStart_toEndOf="@+id/iv_movie_poster_image"
          app:layout_constraintTop_toBottomOf="@+id/linearLayout"
          app:layout_constraintVertical_bias="0.032">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
              android:id="@+id/tv_movie_description_label"
              android:textStyle="bold"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/movie_description_label"/>

            <TextView
              android:id="@+id/tv_movie_plot"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

          </LinearLayout>

        </ScrollView>

        <TextView
          android:id="@+id/tv_trailers_header"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:padding="16dp"
          android:text="@string/trailer_header"
          android:background="@color/colorPrimaryDark"
          android:textSize="16sp"
          android:textStyle="bold"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@+id/scrollView2"/>

        <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_trailer_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/tv_trailers_header"/>

          <include layout="@layout/movie_trailers"/>


          <!--<ImageView-->
            <!--android:id="@+id/iv_trailer_image"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:contentDescription="@string/trailer_image"/>-->

          <!--<TextView-->
            <!--android:id="@+id/tv_trailer_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

        <!--</android.support.v7.widget.RecyclerView>-->
        <!--<LinearLayout-->
          <!--android:id="@+id/ll_movie_trailers"-->
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:padding="16dp"-->
          <!--android:layout_marginTop="8dp"-->
          <!--android:orientation="vertical"-->
          <!--app:layout_constraintTop_toBottomOf="@+id/tv_trailers_header"-->
          <!--tools:layout_editor_absoluteY="527dp"/>-->

        <!--<TextView-->
          <!--android:id="@+id/tv_reviews_header"-->
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:layout_marginTop="8dp"-->
          <!--android:padding="16dp"-->
          <!--android:textSize="16sp"-->
          <!--app:layout_constraintTop_toBottomOf="@+id/ll_movie_trailers"/>-->

        <!--<LinearLayout-->
          <!--android:id="@+id/ll_movie_reviews"-->
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:layout_marginTop="8dp"-->
          <!--android:padding="16dp"-->
          <!--android:orientation="vertical"-->
          <!--app:layout_constraintTop_toBottomOf="@+id/rv_trailer_view"/>-->

        <!--<TextView-->
          <!--android:id="@+id/tv_author_text"-->
          <!--android:layout_width="wrap_content"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:layout_marginTop="8dp"-->
          <!--app:layout_constraintTop_toBottomOf="@+id/ll_movie_reviews"/>-->

        <!--<TextView-->
          <!--android:id="@+id/tv_content_text"-->
          <!--android:textStyle="italic"-->
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:layout_marginTop="8dp"-->
          <!--app:layout_constraintTop_toBottomOf="@+id/tv_author_text"/>-->

        <!--<Button-->
          <!--android:id="@+id/next_review_button"-->
          <!--android:layout_width="wrap_content"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:layout_marginTop="8dp"-->
          <!--android:layout_gravity="end"-->
          <!--app:layout_constraintEnd_toEndOf="parent"-->
          <!--app:layout_constraintStart_toStartOf="parent"-->
          <!--app:layout_constraintTop_toBottomOf="@+id/tv_content_text"/>-->

      </android.support.constraint.ConstraintLayout>

  </ScrollView>

</layout>